syntax = "proto3";

package Listing;

service ProductListingService {
  rpc GetDiscount(ListingRequest) returns (ListingResponse);
}

message ListingRequest {
  int64 product_id = 1;
  int64 user_id = 2;
}

message ListingResponse {
  Discount discount = 1;
}

message Discount {
  float pct = 1;
  int64 value_in_cents = 2;
}
